# duckdb-wasm-minimal-bug-example

./: DOES_NOT_WORK.html  README.md  WORKS.html  WORKS.py  WORKS_TOO.py  diff_with_1000_top_cols.db  diff_with_201_top_cols.db  diff_with_index.db  diff_without_index.db  pyproject.toml  start_node.js
